Fixed horizontal scroll error in Users

--- a/Scoreboards/wwwroot/css/site.css
+++ b/Scoreboards/wwwroot/css/site.css
@@ -80,6 +80,11 @@ tbody > tr:hover {
     justify-content: flex-start;
 }
 
+.row-margin-override {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 .item-picture {
     grid-area: 1 / 1 / 3 / 2;
 }
@@ -181,6 +186,7 @@ tbody > tr:hover {
 /* SEARCH SIZES*/
 .usr-search-bar {
     width: 400px;
+    margin-bottom:20px;
 }
 
 .usr-search-btn {
@@ -258,7 +264,7 @@ tbody > tr:hover {
     text-align: center;
 }
 
-.footer-row {
+.zero-row-margin {
     margin-right: 15px !important;
     margin-left: 15px !important;
 }
@@ -267,7 +273,7 @@ tbody > tr:hover {
     padding: 10px 0;
 }
 
-.footer-row > p {
+.zero-row-margin > p {
     font-size: 0.75em;
     margin: 0;
     padding-bottom: 20px;
